# aio-openwrt

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/aio_openwrt/: __init__.py  _client.py
src/aio_openwrt/methods/: __init__.py  _utils.py  file.py  hostapd.py  network.py  session.py  system.py
tests/: test_client.py  test_utils.py
